--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <title>ShareFish Merchant</title>
-  <script src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script>
+  <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script>
+  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB-yl9gFlGK0lM4JjX2p2BKiuUfaaKe6E&libraries=places"></script>
   <% if (debug === false) { %>
   <link type="text/css" rel="stylesheet" media="all" href="/styles/app.<%= version %>.css" />
